# hh_vacancies

./: L12_Python.ipynb  README.md  area.pkl  area.py  main.py  pyproject.toml  salary.py  skills.py  start.sh
