[tool.poetry]
name = "hh-vacancies"
version = "0.1.0"
description = "requests HH by keywords"
authors = ["Dmitry <7292337@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hh_vacancies"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.0"
regex = "^2023.3.23"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
